Closed
Bug 527168
Opened 16 years ago
Closed 16 years ago
Port bug 524904 ( Add support for generic DLL blocklist ) to SM
Categories
(SeaMonkey :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
seamonkey2.1a1
People
(Reporter: Matti, Unassigned)
Details
Attachments
(1 file)
311 bytes,
patch
|
neil
:
review+
|
Details | Diff | Splinter Review |
Looks like a good idea to port that bug to SM.
This should help with crashes on win32 due to injecting external DLLs .
Comment 1•16 years ago
|
||
Comment 2•16 years ago
|
||
Comment on attachment 411000 [details] [diff] [review]
Patch
I think we want to use that blocklist (see Bug 525103 for the current blocklist), I see no reason for not using that list.
Attachment #411000 -
Flags: review?(neil)
Updated•16 years ago
|
Attachment #411000 -
Flags: review?(neil) → review+
Comment 3•16 years ago
|
||
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → seamonkey2.1a1
You need to log in
before you can comment on or make changes to this bug.
Description
•