Bug 527168 - Port bug 524904 ( Add support for generic DLL blocklist ) to SeaMonkey, r=Neil